[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cost-guard"
version = "0.1.0"
description = "Budget enforcement and cost tracking for LLM applications. Prevents runaway API spend from bugs or prompt injection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["llm", "ai", "cost", "budget", "security", "anthropic", "openai", "rate-limit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []  # Zero runtime dependencies — pure stdlib

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
ai-cost-guard = "ai_cost_guard.tools.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-cost-guard"
Repository = "https://github.com/yourusername/ai-cost-guard"
Issues = "https://github.com/yourusername/ai-cost-guard/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
